--- a/app/src/main/res/layout/view_pager_banner_item_layout.xml
+++ b/app/src/main/res/layout/view_pager_banner_item_layout.xml
@@ -4,7 +4,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
     android:orientation="vertical">
+
+    <!--app:cardCornerRadius="10dp"     卡片圆角大小
+        app:cardElevation="5dp"         卡片阴影高度-->
 
     <ImageView
         android:id="@+id/banner_item_image"
